--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div id="app" />
         <script src="app.js"></script>
         <script>
-            Elm.Jugs.init({
+            Elm.JugPuzzle.init({
                 node: document.getElementById("app")
             });
         </script>
